# rdebrid

./: .gitignore  README.md  pyproject.toml
src/rdebrid/: cli.py  config.py
