[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdebrid"
version = "1.0.1"
description = "CLI tool to download files via Real-Debrid. Unrestricts links and magnets, downloads with aria2c."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.8"
authors = [
    { name = "synxy" },
]
keywords = ["real-debrid", "downloader", "aria2c", "debrid", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/birkdev/rdebrid"

[project.scripts]
rdebrid = "rdebrid.cli:main"
rdb = "rdebrid.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
